--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     <a href="http://muwuyan.xyz" target="_blank">首页(L)</a>
                 </li>
                 <li>
-                    <a href="http://muwuyan.xyz/muwu" target="_blank">关于我(O)</a>
+                    <a href="http://ss.sfin.top/muwu" target="_blank">关于我(O)</a>
                 </li>
                 <li>
-                    <a href="http://muwuyan.xyz/yan" target="_blank">表白网页(E)</a>
+                    <a href="http://ss.sfin.top/yan" target="_blank">表白网页(E)</a>
                 </li>
                 <li>
-                    <a href="http://muwuyan.xyz/han" target="_blank">无言主页(X)</a>
+                    <a href="http://ss.sfin.top/han" target="_blank">无言主页(X)</a>
                 </li>
                 <li>
                     <a href="https://weibo.com/u/5850923237" target="_blank">个人微博(H)</a>
@@ -66,7 +66,7 @@
           
             </div>
             <div class="connect">
-                <a href="http://muwuyan.xyz/muwu">关于我</a>
+                <a href="http://ss.sfin.top/muwu">关于我</a>
                 <a href="https://weibo.com/u/5850923237">个人微博</a>
             </div>
         </div>
@@ -80,16 +80,16 @@
             <h1>导航</h1>
             <ul>
                 <li>
-                    <a href="http://muwuyan.xyz/" target="_blank" onclick="MenuClick(false)">首页</a>
+                    <a href="http://ss.sfin.top/" target="_blank" onclick="MenuClick(false)">首页</a>
                 </li>
                 <li>
-                    <a href="http://muwuyan.xyz/muwu" target="_blank" onclick="MenuClick(false)">关于我</a>
+                    <a href="http://ss.sfin.top/muwu" target="_blank" onclick="MenuClick(false)">关于我</a>
                 </li>
                 <li>
-                    <a href="http://muwuyan.xyz/yan/" target="_blank" onclick="MenuClick(false)">表白网页</a>
+                    <a href="http://ss.sfin.top/yan/" target="_blank" onclick="MenuClick(false)">表白网页</a>
                 </li>
                 <li>
-                    <a href="http://muwuyan.xyz/han/" target="_blank" onclick="MenuClick(false)">无言主页</a>
+                    <a href="http://ss.sfin.top/han/" target="_blank" onclick="MenuClick(false)">无言主页</a>
                 </li>
                 <li>
                     <a href="https://weibo.com/u/5850923237" target="_blank" onclick="MenuClick(false)">个人微博</a>
@@ -256,7 +256,7 @@
         <!-- 底部版权 -->
         <div class="footer" id="footer">
             <p class="left">&copy; 2021 Mu Wuyan | THEME MADE BY <a href="http://muwuyan.xyz/">Mu Wuyan</a></p>
-            <p class="right"><a href="http://beian.miit.gov.cn">琼ICP备2021000709号-1</a></p>
+            <p class="right"><a href="http://beian.miit.gov.cn">ICP备号</a></p>
         </div>
 
     </div>
