--- a/han/index.html
+++ b/han/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
-<body style="background:#000 url(https://api.uomg.com/api/rand.img2?sort=美女)">
+<body style="background:#000 url(https://api.btstu.cn/sjbz/api.php)">
 <div id="wrapper">
     <header id="header">
       <div class="logo">
@@ -25,7 +25,7 @@
       <nav>
         <ul>
           <li><a href="#about">关于Mu Wuyan</a></li>
-          <li><a href="http://muwuyan.xyz/" target="_blank">首页</a></li>
+          <li><a href="http://ss.sfin.top/" target="_blank">首页</a></li>
             <li><a href="http://t.cn/A6zgW1z5" target="_blank">免费主机</a></li>
           <li><a href="https://dns.qjye.cn" target="_blank">免费二级域名分发</a></li>
            <li><a href="http://www.iappw.net">iApp世界网</a></li>
@@ -48,7 +48,7 @@
     </div>
     <footer id="footer">
       <p class="copyright ">© 2020-2021.Mu Wuyan</p>
-      <p class="right"><a href="http://beian.miit.gov.cn">琼ICP备2021000709号-1</a></p>
+      <p class="right"><a href="http://beian.miit.gov.cn">ICP备号</a></p>
 	  <span id="momk"></span><span id="momk" style="color: #ff0000;"></span>
 <script type="text/javascript">
 function NewDate(str) {
