--- a/muwu/index.html
+++ b/muwu/index.html
@@ -28,7 +28,7 @@
            </div>
             <!-- 底部版权 -->
         <div class="footer" id="footer">
-            <p class="left">&copy; 2021 Mu Wuyan |  <a href="http://beian.miit.gov.cn">琼ICP备2021000709号-1</a></p>
+            <p class="left">&copy; 2021 Mu Wuyan |  <a href="http://beian.miit.gov.cn">ICP备号</a></p>
         </div>
     </div>
      </div>
