--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="./favicon.ico" alt="favicon">
             <ul id="menuUL">
                 <li>
-                    <a href="http://muwuyan.xyz" target="_blank">首页(L)</a>
+                    <a href="http://ss.sfin.top" target="_blank">首页(L)</a>
                 </li>
                 <li>
                     <a href="http://ss.sfin.top/muwu" target="_blank">关于我(O)</a>
